--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -308,7 +308,7 @@
             </div>
 
         <div><!-- chart -->
-                <h4 class="chakra-petch-regular">Competency</h4>   
+                <h4 class="chakra-petch-regular">Competency <b style="font-weight: normal; font-size: 14px;">(คิดเป็น %)</b></h4> 
                 <div> 
                     <div class="chartCard">
                         <div class="chartBox" style="background-color: #e2ddc8; border: solid #fff; width: 300px;">
@@ -364,16 +364,16 @@
                 <div style="display: flex;">
                     <div class="quiz_box">
                         <p class="score_title">Quiz 1</p>
-                        <div class="pie animate" style="--p:<%= TicTacToeScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= TicTacToeScore %></div>
+                        <div class="pie animate" style="--p:<%= TicTacToeScore %>;--c:#bd7b67; font-size: 14px;"> <%= TicTacToeScore %></div>
                     </div>
 
                     <div class="quiz_box">
                         <p class="score_title">Quiz 2</p>
-                        <div class="pie animate" style="--p:<%= LibrarySystemScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= LibrarySystemScore %></div>
+                        <div class="pie animate" style="--p:<%= LibrarySystemScore %>;--c:#bd7b67; font-size: 14px;"> <%= LibrarySystemScore %></div>
                     </div>                                   
                     <div class="quiz_box">
                         <p class="score_title">Quiz 3</p>
-                        <div class="pie animate" style="--p:<%= RoshamboScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= RoshamboScore %></div>                  
+                        <div class="pie animate" style="--p:<%= RoshamboScore %>;--c:#bd7b67; font-size: 14px;"> <%= RoshamboScore %></div>                  
                     </div> 
                 </div>
                 
