--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -491,7 +491,7 @@
                                     <p style="margin-bottom: 0px;">
                                 <% } else { %> 
                                 <% if(BasicPercent > TracePercent && BasicPercent > ExplainPercent && BasicPercent > WritePercent){ %>
-                                    <img src="/images/1.webp" alt="Knowledge">
+                                    <img src="/images/7.png" alt="Knowledge">
                                     <p style="margin-bottom: 0px;">
                                 <% } %> 
                                 <!-- <% if(BasicPercent === TracePercent && BasicPercent > ExplainPercent && BasicPercent > WritePercent){ %>
