--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -299,3 +299,11 @@ progress[value]::-webkit-progress-bar {
     from{--p:0}
   }
   
+  a.DrawIo {
+    color: black;
+    text-decoration: none;
+    background-color: #bababa;
+    height: 40px;
+    width: 400px;
+    text-align: center;
+}
