--- a/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
+++ b/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
@@ -500,12 +500,10 @@
                     16.3 (Improvement) ถ้าต้องคำรนวณหาปริมาตรของพีระมิดต้องแก้ไข Algorithms และ Flowcharts อย่างไร <br>
                     (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io 
                     โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (1 คะแนน)</p>
-                    <div class="group3 bg-dark">
-                        
-                            <b style="color: #ff8821;">Draw.io</b>
-                            <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
-                        
-                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink16" type="text" rows="10" required></textarea>
+
+                    <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a> 
+                    <div>
+                        <textarea style="width: 100%;" placeholder="วางลิงก์ที่นี่" name="sendLink16" type="text" rows="10" required></textarea>
                     </div>
                 <br><br>
                 <!-- ข้อ 17 -->
@@ -513,16 +511,12 @@
                     17.1 (Deployment) ให้วาดรูป Flowchart ของ Algorithm โปรแกรมแปลงอุณหภูมิ Celsius (C) เป็น Fahrenheit (F) ต่อไปนี้ให้ถูกต้อง  <br>
                     (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
                     <iframe src="<%= ADRI2 %>" width="100%" height="480" allow="autoplay"></iframe>                
-                </p><br>
-
-                    <div class="group3 bg-dark">
-                        
-                        <b style="color: #ff8821;">Draw.io</b>
-                        <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
-                        
-                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink171" type="text" rows="10" required></textarea>
+                </p>
+                <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a> 
+                    <div>
+                        <textarea style="width: 100%;" placeholder="วางลิงก์ที่นี่" name="sendLink171" type="text" rows="10" required></textarea>
                     </div><br>
-
+                    
                 <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #8c521f;">
                     17.2 (Result) ผลลัพธ์ของโปรแกรมนี้คืออะไร เมื่อกำหนดให้ C เท่ากับ 36 (1 คะแนน)</p>
                     <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="expResult17" required></textarea>
@@ -531,12 +525,9 @@
                     17.3 (Improvement) ถ้าต้องแปลงอุณหภูมิจาก Fahrenheit (F) เป็น Celsius (C) ต้องแก้ไข Flowcharts อย่างไร <br>
                     (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io 
                     โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (1 คะแนน)</p>
-                    <div class="group3 bg-dark">
-                        
-                        <b style="color: #ff8821;">Draw.io</b>
-                        <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
-                        
-                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink172" type="text" rows="10" required></textarea>
+                    <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a> 
+                    <div>
+                        <textarea style="width: 100%;" placeholder="วางลิงก์ที่นี่" name="sendLink172" type="text" rows="10" required></textarea>
                     </div>
                 <br>
                 <!-- ข้อ 18 -->
@@ -544,14 +535,10 @@
                     18.1 (Deployment) ให้เขียน Flowchart ของโปรแกรมตัดเกรด โดยให้มีการรับค่าของตัวแปร และแสดงค่าของข้อมูลดังนี้  <br>
                     (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
                     <iframe src="<%= ADRI3 %>" width="100%" height="480" allow="autoplay"></iframe>
-                </p><br>
-                    
-                    <div class="group3 bg-dark">
-                        
-                        <b style="color: #ff8821;">Draw.io</b>
-                        <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
-                        
-                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink181" type="text" rows="10" required></textarea>
+                </p>
+                <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a> 
+                    <div>
+                        <textarea style="width: 100%;" placeholder="วางลิงก์ที่นี่" name="sendLink181" type="text" rows="10" required></textarea>
                     </div><br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #366241;">
                         18.2 (Result) ผลลัพธ์ของโปรแกรมนี้คืออะไร เมื่อกำหนดให้ คะแนนเท่ากับ 80 (1 คะแนน)</p>
@@ -561,12 +548,9 @@
                         18.3 (Improvement) ถ้าต้องการให้มีการแสดงข้อความแจ้งเตือนว่า "Please Enter 0 - 100: " เมื่อใส่ข้อมูลที่ไม่ใช่ตัวเลข 0 - 100 ต้องแก้ไข Flowcharts อย่างไร  <br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io 
                         โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (1 คะแนน)</p>
-                        <div class="group3 bg-dark">
-                            
-                            <b style="color: #ff8821;">Draw.io</b>
-                            <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
-                            
-                            <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink182" type="text" rows="10" required></textarea>
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a> 
+                        <div>
+                            <textarea style="width: 100%;" placeholder="วางลิงก์ที่นี่" name="sendLink182" type="text" rows="10" required></textarea>
                         </div>
                     <br>
                     <!-- ข้อ 19 -->
@@ -575,13 +559,10 @@
                         และพิมพ์ C คือการแปลง Fahrenheit เป็น Celcius โดยรับค่าของตัวแปร ทำการคำนวณ และแสดงค่าของข้อมูลดังนี้  <br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
                         <iframe src="<%= ADRI4 %>" width="100%" height="480" allow="autoplay"></iframe>                
-                    </p><br>
-                    <div class="group3 bg-dark">
-                        
-                        <b style="color: #ff8821;">Draw.io</b>
-                        <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
-                        
-                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink191" type="text" rows="10" required></textarea>
+                    </p>
+                    <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a> 
+                    <div>
+                        <textarea style="width: 100%;" placeholder="วางลิงก์ที่นี่" name="sendLink191" type="text" rows="10" required></textarea>
                     </div><br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #453662;">
                         19.2 (Result) ผลลัพธ์ของโปรแกรมนี้คืออะไร เมื่อพิมพ์ F และใส่ค่า C เป็น 36 (1 คะแนน)</p>
@@ -592,25 +573,20 @@
                         กำหนดให้สูตร Kelvin = Celsius + 273.15 <br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io 
                         โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (1 คะแนน)</p>
-                        <div class="group3 bg-dark">
-                            
-                            <b style="color: #ff8821;">Draw.io</b>
-                            <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
-                            
-                            <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink192" type="text" rows="10" required></textarea>
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a> 
+                        <div>
+                            <textarea style="width: 100%;" placeholder="วางลิงก์ที่นี่" name="sendLink192" type="text" rows="10" required></textarea>
                         </div>
                     <br>
                     <!-- ข้อ 20 -->
                     <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                         20.1 (Deployment) ให้เขียน Flowchart โปรแกรมคำนวณดอกเบี้ยเงินฝากธนาคารจากโจทย์ที่กำหนดให้ (3 คะแนน) <br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง 
-                        <iframe src="<%= ADRI5 %>" width="100%" height="480" allow="autoplay"></iframe>                    </p><br>  
-
-                        <div class="group3 bg-dark">
-                        <b style="color: #ff8821;">Draw.io</b>
-                        <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
-                        
-                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink201" type="text" rows="10" required></textarea>
+                        <iframe src="<%= ADRI5 %>" width="100%" height="480" allow="autoplay"></iframe>                    
+                    </p>  
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a> 
+                        <div>
+                        <textarea style="width: 100%;" placeholder="วางลิงก์ที่นี่" name="sendLink201" type="text" rows="10" required></textarea>
                     </div><br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #687521;">
                         20.2 (Result) ถ้ากำหนดให้ฝากเงินเริ่มต้นที่ 20,000 บาท เมื่อครบ 3 เดือน จะได้ดอกเบี้ยหลังหักภาษีเท่าไร (1 คะแนน)</p>
@@ -620,12 +596,9 @@
                         20.3 (Improvement) ถ้าต้องการให้คิดดอกเบี้ยเงินฝากประจำเป็น 6 เดือน จะแก้ไข Flowchart อย่างไร<br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io 
                         โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (1 คะแนน)</p>
-                        <div class="group3 bg-dark">
-                            
-                            <b style="color: #ff8821;">Draw.io</b>
-                            <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
-                            
-                            <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink202" type="text" rows="10" required></textarea>
+                        <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">✎ Click to go to Draw.io</a> 
+                        <div>
+                            <textarea style="width: 100%;" placeholder="วางลิงก์ที่นี่" name="sendLink202" type="text" rows="10" required></textarea>
                         </div>
                     <br>
 
